<resources>
    <string name="app_name">CPfy</string>
    <string name="clist_api_username">Zeronfinity</string>

    <!-- fragment_contest_list strings -->
    <string name="launch_icon_content_desc">Launch icon to go to contest website</string>
    <string name="platform_icon_content_desc">Contest platform icon</string>
    <string name="starts_at_colon_tv_label">Starts at:</string>
    <string name="duration_colon_tv_label">Duration:</string>
    <string name="started_at_colon_tv_label">Started at:</string>
    <string name="time_left_colon_tv_label">Time left:</string>
    <string name="time_left_to_start">%s to start</string>
    <string name="contest_already_started">Contest already started!</string>
    <string name="contest_already_ended">Contest already ended!</string>
    <string name="empty_contest_list_label">No contest to show, make sure your filters are set correctly and internet connection is available</string>

    <!-- fragment_filters strings -->
    <string name="time_filters_heading">Press a date/time to change it</string>
    <string name="start_time_tv_label">Start Time</string>
    <string name="end_time_tv_label">End Time</string>
    <string name="duration_tv_label">Duration</string>
    <string name="enabled_platform_filters_heading">Enabled platforms - select to disable</string>
    <string name="disabled_platform_filters_heading">Disabled platforms - select to enable</string>
    <string name="disable_all_platforms">Disable all platforms</string>
    <string name="enable_all_platforms">Enable all platforms</string>
    <string name="reset">Reset</string>
    <string name="expand_contract_icon">Expand/contract icon</string>

    <!-- menu strings -->
    <string name="menu_filter">Filter</string>
    <string name="menu_clipboard">Clipboard</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_web_view">Web View</string>
    <string name="menu_about">About</string>

    <!-- special symbols -->
    <string name="less_than_or_equal_to">\u2264</string>

    <!-- shared preference file names and keys -->
    <string name="shared_preferences_cookies">com.zeronfinity.cpfy.cookies</string>
    <string name="shared_preferences_filters">com.zeronfinity.cpfy.filters</string>
    <string name="s_pref_filters_is_saved">is_saved</string>
    <string name="s_pref_filters_key_start_time_lower_bound">start_time_lower_bound</string>
    <string name="s_pref_filters_key_start_time_lower_bound_today">start_time_lower_bound_today</string>
    <string name="s_pref_filters_key_start_time_days_after_today">start_time_days_after_today</string>
    <string name="s_pref_filters_key_start_time_upper_bound">start_time_upper_bound</string>
    <string name="s_pref_filters_key_end_time_lower_bound">end_time_lower_bound</string>
    <string name="s_pref_filters_key_end_time_lower_bound_today">end_time_lower_bound_today</string>
    <string name="s_pref_filters_key_end_time_days_after_today">end_time_days_after_today</string>
    <string name="s_pref_filters_key_end_time_upper_bound">end_time_upper_bound</string>
    <string name="s_pref_filters_key_duration_lower_bound">duration_lower_bound</string>
    <string name="s_pref_filters_key_duration_upper_bound">duration_upper_bound</string>

    <string name="shared_preferences_first_run">com.zeronfinity.cpfy.first_run</string>
    <string name="s_pref_is_first_run">is_saved</string>

    <!-- fragment_duration_picker string -->
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>

    <!-- clist strings -->
    <string name="clist_base_url">https://clist.by</string>
    <string name="clist_login_url">https://clist.by/login/</string>
    <string name="clist_session_cookie">clist_session_cookie</string>

    <!-- fragment_clipboard strings -->
    <string name="copy">Copy</string>
    <string name="link_colon">Link:</string>
    <string name="contests">contests</string>
    <string name="today">Today</string>
    <string name="contest_info_clipboard">Contest Info Clipboard: Contest list is currently empty</string>
    <string name="day_s_after">day(s) after</string>
    <string name="generated_by_cpfy">- generated by CPfy</string>

    <!-- fragment_notification strings -->
    <string name="allow_auto_start">Allow Auto Start</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="lift_battery_restrictions">Lift Battery Restrictions</string>
    <string name="notification_header_label">Some Android manufacturers, specially ones with chinese custom roms, kill any background process whenever app is closed. So, you may need to give some permissions manually for CPfy to show notifications, the following buttons will lead to the permission allowance screen if they exist in your phone. To learn more, visit</string>
    <string name="dontkillmyapp_url">https://dontkillmyapp.com/</string>
    <string name="notification_auto_start_label">This will allow starting service to show notification</string>
    <string name="notification_allow_label">This will allow showing notifications in case it\'s disabled</string>
    <string name="notification_battery_saver_label">This will fix aggressive battery optimizations issues</string>
    <string name="notification_priorities">Notification Priorities</string>
    <string name="change_all">Change All</string>

    <!-- fragment_about strings -->
    <string name="google_play_licenses">Google Play Licenses</string>
    <string name="third_party_licenses">Third Party Licenses</string>
    <string name="cpfy_version_label">CPfy version</string>
    <string name="version_label">Version</string>
    <string name="version">%s (%s)</string>
    <string name="developer">Developer</string>
    <string name="tahsin_masrur_zeronfinity">Tahsin Masrur (Zeronfinity)</string>
    <string name="developer_portfolio_link">https://zeronfinity.github.io/</string>
    <string name="github">GitHub</string>
    <string name="github_link_cpfy">https://github.com/Zeronfinity/CPfy</string>
    <string-array name="notification_priority">
        <item>Default</item>
        <item>None</item>
        <item>Max</item>
        <item>High</item>
        <item>Low</item>
        <item>Min</item>
    </string-array>

    <!-- popup_first_run string -->
    <string name="ok">OK</string>
    <string name="welcome_to_cpfy">Welcome to CPfy!</string>
    <string name="first_run_web_view_explanation">If you are having problem with API limit, you can go to Web View menu and log into your own clist.by account for smoother experience.</string>
    <string name="first_run_notification_explanation">Contest notifications may not appear in some custom ROMs like MIUI due to aggressively killing background services. Go to Notification menu for details of how to handle it.</string>
    <string name="go_to_notification">Go to notification</string>
    <string name="go_to_web_view">Go to web view</string>
    <string name="web_view_required_error_msg">API limit reached or session expired!\nSign up or log into your own clist.by account to continue</string>
    <string name="clist_by">clist.by</string>
    <string name="first_run_web_view_explanation_1st_part">"If you are having problem with API limit, you can go to Web View menu and log into your own "</string>
    <string name="first_run_web_view_explanation_last_part">" account for smoother experience."</string>
</resources>
