<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/miFilter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/menu_filter"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/miClipboard"
        android:icon="@drawable/ic_baseline_content_paste_24"
        android:title="@string/menu_clipboard"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/miSettings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/miAbout"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/menu_about"
        app:showAsAction="ifRoom" />
</menu>
