<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvDaysLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/days"
        android:textColor="@color/secondaryDarkColor"
        app:layout_constraintBottom_toTopOf="@+id/numPickerDays"
        app:layout_constraintEnd_toEndOf="@+id/numPickerDays"
        app:layout_constraintStart_toStartOf="@+id/numPickerDays"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHoursLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/hours"
        android:textColor="@color/secondaryDarkColor"
        app:layout_constraintBottom_toTopOf="@+id/numPickerHours"
        app:layout_constraintEnd_toEndOf="@+id/numPickerHours"
        app:layout_constraintStart_toStartOf="@+id/numPickerHours"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMinutesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/minutes"
        android:textColor="@color/secondaryDarkColor"
        app:layout_constraintBottom_toTopOf="@+id/numPickerMinutes"
        app:layout_constraintEnd_toEndOf="@+id/numPickerMinutes"
        app:layout_constraintStart_toStartOf="@+id/numPickerMinutes"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/numPickerDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:foregroundTint="@color/secondaryColor"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/numPickerHours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDaysLabel" />

    <NumberPicker
        android:id="@+id/numPickerHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/numPickerMinutes"
        app:layout_constraintStart_toEndOf="@+id/numPickerDays"
        app:layout_constraintTop_toBottomOf="@+id/tvHoursLabel" />

    <NumberPicker
        android:id="@+id/numPickerMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:backgroundTint="@color/secondaryColor"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numPickerHours"
        app:layout_constraintTop_toBottomOf="@+id/tvMinutesLabel" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnOk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/okay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>
